--- a/index.html
+++ b/index.html
@@ -33,10 +33,6 @@
 </head>
 
 <body>
-    <svg class="g-icon">
-        <use href="www.baidu.com"></use>
-        <circle cx="100" cy="50" r="40" stroke="black" stroke-width="2" fill="red" />
-    </svg> 
   <div id="app">
       
     <div class="button">
@@ -49,7 +45,7 @@
       <vi-button type="danger"><span>危险按钮</span></vi-button>
     </div>
     <div class="icon">
-      <vi-icon>ss</vi-icon>
+      <vi-icon :name="'loading'"></vi-icon>
     </div>
   </div>
 </body>
