--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>vue-view</title>
+  <!-- <script src="./src/packages/components/svg.js"></script> -->
   <style>
     * {
       margin: 0;
@@ -13,22 +14,9 @@
     }
     .button{
       margin: 5px 2px;
+      /* display: inline-flex; */
     }
 
-    /* .ss{
-      background: red;
-    }
-    .ss>span{
-      color: black;
-      display: inline-block;
-      padding: 1em 2em;
-      
-    }
-    .vi-button-primary>span{
-      display: inline-block;
-      padding: 3em 2em;
-      color: black;
-    } */
   </style>
 </head>
 
@@ -36,17 +24,18 @@
   <div id="app">
       
     <div class="button">
-
-      <vi-button class="ss"><span>默认按钮</span></vi-button>
-      <vi-button type="primary"><span>主要按钮</span></vi-button>
-      <vi-button type="success"><span>成功按钮</span></vi-button>
-      <vi-button type="info"><span>信息按钮</span></vi-button>
+      <vi-button icon-name="setting" icon-position="right"><span>默认按钮</span></vi-button>
+      <vi-button type="primary" icon-name="search"><span>主要按钮</span></vi-button>
+      <vi-button type="success" icon-name="loading" icon-size="medium"><span>成功按钮</span></vi-button>
+      <vi-button type="info" icon-name="loading" icon-size="large"><span>信息按钮</span></vi-button>
       <vi-button type="warning"><span>警告按钮</span></vi-button>
       <vi-button type="danger"><span>危险按钮</span></vi-button>
     </div>
-    <div class="icon">
-      <vi-icon :name="'loading'"></vi-icon>
-    </div>
+    <!-- <div class="icon">
+      <vi-icon name="loading"></vi-icon>
+      <vi-icon name="setting" size="small"></vi-icon>
+      <vi-icon name="search" size="large"></vi-icon>
+    </div> -->
   </div>
 </body>
 
