--- a/index.html
+++ b/index.html
@@ -12,59 +12,32 @@
       padding: 0;
       box-sizing: border-box;
     }
-    .button{
-      margin: 5px 2px;
-      /* display: inline-flex; */
-    }
-    .test .icon{
-      /* display: inline-block; */
-      width: 5em;
-      height: 2em;
-    }
-    .ss>.ff{
-      display: block;
-      width: 30px;
-      height: 30px;
-      background: red;
-    }
-    .sd>.jj{
-      width: 1px;
-      height: 1px;
-      /* background: red; */
-      fill:red;
-    }
+   /* .dd>*{
+     font-size: 22px;
+     display: inline-block;
+     padding: 10px;
+   } */
 
   </style>
 </head>
 
 <body>
   <div id="app">
+    <div class="icon">
+      <vi-icon vi-icon-name="search"></vi-icon>
+      <vi-icon vi-icon-name="search" vi-icon-size=small>
+    </div>
 
     <div class="button">
-      <vi-button :icon-name="'setting'" icon-position="right"><span>默认按钮</span></vi-button>
-      <vi-button type="primary" icon-name="search"><span>主要按钮</span></vi-button>
-      <vi-button type="success" icon-name="loading" icon-size="medium"><span>成功按钮</span></vi-button>
-      <vi-button type="info" icon-name="loading" icon-size="large" icon-position="right"><span>信息按钮</span></vi-button>
-      <vi-button type="warning" circle><span>警告按钮</span></vi-button>
-      <vi-button type="danger" disabled="disabled"></spa>危险按钮</span></vi-button>
-      <br>
-      <vi-button icon-size="small" icon-name="setting" circle="circle"><span></span></vi-button>
-      <vi-button icon-size="medium" icon-name="upload" circle="circle"><span></span></vi-button>
-      <vi-button icon-size="small" icon-name="left" circle="circle"><span></span></vi-button>
-      <!-- 图标按钮 -->
-      <br>
-      <vi-button class="test"><vi-icon class="icon" vi-icon-name="setting"></vi-icon></vi-button>
-      <vi-button type="primary" icon-name="search"></vi-button>
-      <vi-button type="success" icon-name="loading" ></vi-button>
-      <vi-button type="info" icon-name="loading" icon-size="large" ></vi-button>
-      <vi-button type="warning" icon-name="upload"></vi-button>
-    </div>
-    <div class="icon">
-      <div class="ss"><vi-icon class="ff" vi-icon-name="loading"></vi-icon></div>
-      <div class="sd"><vi-icon class="jj" vi-icon-name="setting" vi-icon-size="small"></vi-icon></div>
-      <vi-icon vi-icon-name="search" vi-icon-size="large"></vi-icon>
+      <vi-button @click="aa">默认样式</vi-button>
+      <vi-button class="dd" type="primary" icon-name="upload" >主要按钮</vi-button>
+      <vi-button  type="primary" icon-name="upload" icon-size="medium" circle="circle"></vi-button>
+      <vi-button type="primary" icon-name="upload" icon-position="right">主要按钮</vi-button>
+      <vi-button type="primary" icon-name="upload" icon-size="medium" circle="circle" disabled="disabled"></vi-button>
     </div>
   </div>
 </body>
-
+<script>
+  
+</script>
 </html>
