--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
    fill: red;
    /* background: green; */
  }
+ .grid{
+   margin-top: 10px;
+ }
   </style>
 </head>
 
@@ -71,9 +74,21 @@
     </div>
     <hr>
     <br>
+    <br>
 
     <div class="grid">
-      
+      <vi-row>
+        <vi-col><div></div>div</vi-col>
+      </vi-row>
+      <vi-row>
+        <vi-col><div class="">div</div></vi-col>
+        <vi-col><div>div</div></vi-col>
+      </vi-row>
+      <vi-row>
+        <vi-col><div class="">div</div></vi-col>
+        <vi-col><div>div</div></vi-col>
+        <vi-col><div>div</div></vi-col>
+      </vi-row>
     </div>
 
   </div>
