--- a/index.html
+++ b/index.html
@@ -16,8 +16,33 @@
    /* background: green; */
  }
  .grid{
+   margin: 0 2px;
    margin-top: 10px;
  }
+ .row{
+   margin-bottom: 10px;
+ }
+
+ .row:last-child{
+    margin-bottom: 0;
+ }
+ 
+ .col{
+  background: #f9fafc;
+  /* border: 1px solid red; */
+  min-height: 36px;
+  /* background: gray; */
+ }
+ .col:not(:first-child){
+   /* border-left: 1px solid green; */
+   border-left:0;
+ }
+ .test{
+   height: 100%;
+   background: yellow;
+   border-radius: 3px;
+ }
+
   </style>
 </head>
 
@@ -77,17 +102,23 @@
     <br>
 
     <div class="grid">
-      <vi-row>
-        <vi-col><div></div>div</vi-col>
+      <vi-row class="row" :gutter="20">
+        <vi-col class="col" :span="24"><div class="test">gfg</div></vi-col>
       </vi-row>
-      <vi-row>
-        <vi-col><div class="">div</div></vi-col>
-        <vi-col><div>div</div></vi-col>
+      <vi-row class="row"  :gutter="10">
+        <vi-col class="col" :span="12"><div class="test"></div></vi-col>
+        <vi-col class="col" :span="12"><div class="test"></div></vi-col>
       </vi-row>
-      <vi-row>
-        <vi-col><div class="">div</div></vi-col>
-        <vi-col><div>div</div></vi-col>
-        <vi-col><div>div</div></vi-col>
+      <vi-row class="row"  :gutter="20">
+        <vi-col class="col" :span="8"><div class="test"></div></vi-col>
+        <vi-col class="col" :span="8"><div class="test"></div></vi-col>
+        <vi-col class="col" :span="8"><div class="test"></div></vi-col>
+      </vi-row>
+      <vi-row class="row" :gutter="12">
+        <vi-col class="col" :span="1"><div class="test"></div></vi-col>
+        <vi-col class="col" :span="7"><div class="test"></div></vi-col>
+        <vi-col class="col" :span="10"><div class="test"></div></vi-col>
+        <vi-col class="col" :span="6"><div class="test"></div></vi-col>
       </vi-row>
     </div>
 
