--- a/index.html
+++ b/index.html
@@ -103,22 +103,22 @@
 
     <div class="grid">
       <vi-row class="row" :gutter="20">
-        <vi-col class="col" :span="24"><div class="test">gfg</div></vi-col>
+        <vi-col class="col" :span="14" :offset="10"><div class="test">gfg</div></vi-col>
       </vi-row>
       <vi-row class="row"  :gutter="10">
-        <vi-col class="col" :span="12"><div class="test"></div></vi-col>
-        <vi-col class="col" :span="12"><div class="test"></div></vi-col>
+        <vi-col class="col" :span="9" :offset="2"><div class="test"></div></vi-col>
+        <vi-col class="col" :span="10" :offset="3"><div class="test"></div></vi-col>
       </vi-row>
       <vi-row class="row"  :gutter="20">
-        <vi-col class="col" :span="8"><div class="test"></div></vi-col>
-        <vi-col class="col" :span="8"><div class="test"></div></vi-col>
-        <vi-col class="col" :span="8"><div class="test"></div></vi-col>
+        <vi-col class="col" :span="6" :offse0t="1"><div class="test"></div></vi-col>
+        <vi-col class="col" :span="8" :offset="6"><div class="test"></div></vi-col>
+        <vi-col class="col" :span="8" :offset="3"><div class="test"></div></vi-col>
       </vi-row>
       <vi-row class="row" :gutter="12">
-        <vi-col class="col" :span="1"><div class="test"></div></vi-col>
-        <vi-col class="col" :span="7"><div class="test"></div></vi-col>
-        <vi-col class="col" :span="10"><div class="test"></div></vi-col>
-        <vi-col class="col" :span="6"><div class="test"></div></vi-col>
+        <vi-col class="col" :span="1" :offset="2"><div class="test"></div></vi-col>
+        <vi-col class="col" :span="4" :offset="8"><div class="test"></div></vi-col>
+        <vi-col class="col" :span="2" :offset="3"><div class="test"></div></vi-col>
+        <vi-col class="col" :span="3" :offset="1"><div class="test"></div></vi-col>
       </vi-row>
     </div>
 
