--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
  }
  .test{
    height: 100%;
+   width:100%;
+        /* height: 100%; */
    background: yellow;
    border-radius: 3px;
  }
@@ -106,19 +108,37 @@
         <vi-col class="col" :span="14" :offset="10"><div class="test">gfg</div></vi-col>
       </vi-row>
       <vi-row class="row"  :gutter="10">
-        <vi-col class="col" :span="9" :offset="2"><div class="test"></div></vi-col>
-        <vi-col class="col" :span="10" :offset="3"><div class="test"></div></vi-col>
+        <vi-col class="col" :span="9" :offset="2"><div class="test">dd</div></vi-col>
+        <vi-col class="col" :span="10" :offset="3"><div class="test">s</div></vi-col>
       </vi-row>
       <vi-row class="row"  :gutter="20">
-        <vi-col class="col" :span="6" :offse0t="1"><div class="test"></div></vi-col>
-        <vi-col class="col" :span="8" :offset="6"><div class="test"></div></vi-col>
-        <vi-col class="col" :span="8" :offset="3"><div class="test"></div></vi-col>
+        <vi-col class="col" :span="6" :offse0t="1"><div class="test">d</div></vi-col>
+        <vi-col class="col" :span="8" :offset="6"><div class="test">ss</div></vi-col>
+        <vi-col class="col" :span="8" :offset="3"><div class="test">g</div></vi-col>
       </vi-row>
       <vi-row class="row" :gutter="12">
-        <vi-col class="col" :span="1" :offset="2"><div class="test"></div></vi-col>
-        <vi-col class="col" :span="4" :offset="8"><div class="test"></div></vi-col>
-        <vi-col class="col" :span="2" :offset="3"><div class="test"></div></vi-col>
-        <vi-col class="col" :span="3" :offset="1"><div class="test"></div></vi-col>
+        <vi-col class="col" :span="1" :offset="2"><div class="test">r</div></vi-col>
+        <vi-col class="col" :span="4" :offset="8"><div class="test">u</div></vi-col>
+        <vi-col class="col" :span="2" :offset="3"><div class="test">o</div></vi-col>
+        <vi-col class="col" :span="3" :offset="1"><div class="test">l</div></vi-col>
+      </vi-row>
+      <vi-row class="row" :gutter="12">
+        <vi-col class="col" :span="6" ><div class="test">r</div></vi-col>
+        <!-- <vi-col class="col" :span="4" ><div class="test">u</div></vi-col> -->
+        <vi-col class="col" :span="5" ><div class="test">o</div></vi-col>
+        <vi-col class="col" :span="9" ><div class="test">l</div></vi-col>
+      </vi-row>
+      <vi-row class="row" :gutter="12" :justify="'end'">
+        <vi-col class="col" :span="6" ><div class="test">r</div></vi-col>
+        <!-- <vi-col class="col" :span="4" ><div class="test">u</div></vi-col> -->
+        <vi-col class="col" :span="5" ><div class="test">o</div></vi-col>
+        <vi-col class="col" :span="9" ><div class="test">l</div></vi-col>
+      </vi-row>
+      <vi-row class="row" :gutter="12" :justify="'center'">
+        <vi-col class="col" :span="6" ><div class="test">r</div></vi-col>
+        <!-- <vi-col class="col" :span="4" ><div class="test">u</div></vi-col> -->
+        <vi-col class="col" :span="5" ><div class="test">o</div></vi-col>
+        <vi-col class="col" :span="9" ><div class="test">l</div></vi-col>
       </vi-row>
     </div>
 
