基本完成layout组件

--- a/index.html
+++ b/index.html
@@ -137,6 +137,18 @@
     </div>
     <hr>
     <br>
+    <div class="layout">
+      <vi-Container>
+        <vi-header></vi-header>
+        <vi-main></vi-main>
+      </vi-Container>
+      <vi-Container>
+        <vi-header></vi-header>
+        <vi-aside></vi-aside>
+        <vi-header></vi-header>
+        <vi-main></vi-main>
+      </vi-Container>
+    </div>
 
   </div>
 </body>
