--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
       <vi-icon vi-icon-name="search" vi-icon-size=small></vi-icon>
       <vi-icon vi-icon-name="info" vi-icon-size=small></vi-icon>
       <vi-icon vi-icon-name="clear" vi-icon-size=small></vi-icon>
-      
     </div>
 
     <div class="button">
@@ -117,19 +116,19 @@
     </div>
     <hr>
     <br>
-    <div class="input">
+    <!-- <div class="input">
       <vi-input placeholder="prefix" suffix-icon="info" @click="aa"></vi-input>
       <vi-input placeholder="prefix" prefix-icon="info" @click="aa"></vi-input>
       <vi-input placeholder="suffix" clearable suffix-icon="error" ></vi-input>
       <vi-input placeholder="请输入内容" readonly v-model="input1"></vi-input>
       <vi-input placeholder="请输入内容" v-model="input1"></vi-input>
       <vi-input disabled placeholder="禁止修改"></vi-input>
-    </div>
+    </div> -->
     <hr>
     <br>
     <br>
 
-    <div class="grid">
+    <!-- <div class="grid">
       <vi-row class="row" :gutter="20">
         <vi-col class="col" :span="14" :offset="10"><div class="test">gfg</div></vi-col>
       </vi-row>
@@ -150,26 +149,23 @@
       </vi-row>
       <vi-row class="row" :gutter="12">
         <vi-col class="col" :span="6" ><div class="test">r</div></vi-col>
-        <!-- <vi-col class="col" :span="4" ><div class="test">u</div></vi-col> -->
         <vi-col class="col" :span="5" ><div class="test">o</div></vi-col>
         <vi-col class="col" :span="9" ><div class="test">l</div></vi-col>
       </vi-row>
       <vi-row class="row" :gutter="12" :justify="'end'">
-        <vi-col class="col" :span="6" ><div class="test">r</div></vi-col>
-        <!-- <vi-col class="col" :span="4" ><div class="test">u</div></vi-col> -->
+        <vi-col class="col" :span="6" ><div class="test">r</div></vi-col>        
         <vi-col class="col" :span="5" ><div class="test">o</div></vi-col>
         <vi-col class="col" :span="9" ><div class="test">l</div></vi-col>
       </vi-row>
       <vi-row class="row" :gutter="12" :justify="'center'">
         <vi-col class="col" :span="6" ><div class="test">r</div></vi-col>
-        <!-- <vi-col class="col" :span="4" ><div class="test">u</div></vi-col> -->
         <vi-col class="col" :span="5" ><div class="test">o</div></vi-col>
         <vi-col class="col" :span="9" ><div class="test">l</div></vi-col>
       </vi-row>
-    </div>
+    </div> -->
     <hr>
     <br>
-    <div class="layout">
+    <!-- <div class="layout">
       <vi-container>
         <vi-header>header</vi-header>
         <vi-main>main</vi-main>
@@ -183,6 +179,10 @@
           <vi-footer>footer</vi-footer>
         </vi-container>
       </vi-container>
+    </div> -->
+
+    <div class="toast">
+      <vi-toast>ss</vi-toast>
     </div>
 
   </div>
