基本实现所有功能

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
     .vi-container:nth-child(7) .vi-aside {
       line-height: 320px;
     }
+    .vi-icon-default{
+      fill: red;
+      width: 5em;
+      height: 5em;
+    }
   </style>
 </head>
 
@@ -183,10 +188,12 @@
     </div> -->
 
     <div class="toast">
-      <vi-toast>
+      <!-- <vi-toast> -->
         <button @click="showToast">点我</button>
         <button @click="showToast1">点我1</button>
-      </vi-toast>
+        <button @click="showToast2">点我2</button>
+        <button @click="showToast3">点我3</button>
+      <!-- </vi-toast> -->
     </div>
 
   </div>
