实现有icon时和没有icond的布结构

--- a/index.html
+++ b/index.html
@@ -81,47 +81,47 @@
 
 <body>
   <div id="app">
-    <div class="icon">
+    <!-- <div class="icon">
       <vi-icon class="test" vi-icon-name="info" vi-icon-size="small"></vi-icon>
       <vi-icon vi-icon-name="search" vi-icon-size=small></vi-icon>
       <vi-icon vi-icon-name="error" vi-icon-size=small></vi-icon>
       <vi-icon vi-icon-name="info" vi-icon-size=small></vi-icon>
       <vi-icon vi-icon-name="clear" vi-icon-size=small></vi-icon>
-    </div>
+    </div> -->
 
-    <div class="button">
+    <!-- <div class="button">
       <vi-button class="dc">默认样式</vi-button>
       <vi-button type="default">默认样式</vi-button>
       <vi-button type="primary" icon-name="upload" >主要按钮</vi-button>
       <vi-button type="primary" icon-name="upload" icon-size="medium" circle="circle"></vi-button>
       <vi-button type="primary" icon-name="upload" icon-position="right">主要按钮</vi-button>
       <vi-button type="primary" icon-name="upload" icon-size="medium" circle="circle" disabled="disabled"></vi-button>
-    </div>
+    </div> -->
 
-    <div class="buttonGroup">
+    <!-- <div class="buttonGroup">
       <vi-button-group>
         <vi-icon class="ss" vi-icon-name="left" vi-icon-size=small></vi-icon>
         <vi-icon class="ss" vi-icon-name="pause" vi-icon-size=small></vi-icon>
         <vi-icon class="ss" vi-icon-name="right" vi-icon-size=small></vi-icon>
-      </vi-button-group>
+      </vi-button-group> -->
       <!-- <br> -->
-      <vi-button-group>
+      <!-- <vi-button-group>
           <vi-button type="primary">默认样式</vi-button>
           <vi-button type="primary">主要按钮</vi-button>
-      </vi-button-group>
+      </vi-button-group> -->
       <!-- <br> -->
-      <vi-button-group>
+      <!-- <vi-button-group>
           <vi-button>默认样式</vi-button>
           <vi-button >主要按钮</vi-button>
-      </vi-button-group>
-      <vi-button-group>
+      </vi-button-group> -->
+      <!-- <vi-button-group>
           <vi-button type="primary" icon-name="left" icon-size=small>上一页</vi-button>
           <vi-button type="primary" icon-name="left" icon-size=small>上一页</vi-button>
           <vi-button type="primary" icon-name="right" icon-size=small icon-position="right">下一页</vi-button>
       </vi-button-group>
-    </div>
-    <hr>
-    <br>
+    </div> -->
+    <!-- <hr>
+    <br> -->
     <!-- <div class="input">
       <vi-input placeholder="prefix" suffix-icon="info" @click="aa"></vi-input>
       <vi-input placeholder="prefix" prefix-icon="info" @click="aa"></vi-input>
@@ -130,9 +130,9 @@
       <vi-input placeholder="请输入内容" v-model="input1"></vi-input>
       <vi-input disabled placeholder="禁止修改"></vi-input>
     </div> -->
-    <hr>
+    <!-- <hr>
     <br>
-    <br>
+    <br> -->
 
     <!-- <div class="grid">
       <vi-row class="row" :gutter="20">
@@ -169,8 +169,8 @@
         <vi-col class="col" :span="9" ><div class="test">l</div></vi-col>
       </vi-row>
     </div> -->
-    <hr>
-    <br>
+    <!-- <hr>
+    <br> -->
     <!-- <div class="layout">
       <vi-container>
         <vi-header>header</vi-header>
@@ -193,6 +193,7 @@
         <button @click="showToast1">点我1</button>
         <button @click="showToast2">点我2</button>
         <button @click="showToast3">点我3</button>
+        <button @click="showToast3">点我4</button>
       <!-- </vi-toast> -->
     </div>
 
