修改toast显示的位置

--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
     }
     .vi-icon-default{
       fill: red;
-      width: 5em;
-      height: 5em;
+      width: 4em;
+      height: 4em;
+      padding: 0;
     }
   </style>
 </head>
@@ -193,7 +194,7 @@
         <button @click="showToast1">点我1</button>
         <button @click="showToast2">点我2</button>
         <button @click="showToast3">点我3</button>
-        <button @click="showToast3">点我4</button>
+        <button @click="showToast4">点我4</button>
       <!-- </vi-toast> -->
     </div>
 
