--- a/index.html
+++ b/index.html
@@ -189,13 +189,19 @@
     </div> -->
 
     <div class="toast">
-      <!-- <vi-toast> -->
+      <vi-toast>
         <button @click="showToast">点我</button>
         <button @click="showToast1">点我1</button>
         <button @click="showToast2">点我2</button>
         <button @click="showToast3">点我3</button>
         <button @click="showToast4">点我4</button>
-      <!-- </vi-toast> -->
+      </vi-toast>
+      <!-- <hr> -->
+        <button @click="showToast">点我</button>
+        <button @click="showToast1">点我1</button>
+        <button @click="showToast2">点我2</button>
+        <button @click="showToast3">点我3</button>
+        <button @click="showToast4">点我4</button>
     </div>
 
   </div>
