--- a/index.html
+++ b/index.html
@@ -196,22 +196,26 @@
       </vi-container>
     </div> -->
 
-    <div class="toast test">
-      <vi-toast>
+    <!-- <div class="toast test"> -->
+      <!-- <vi-toast>
         <button @click="showToast">点我</button>
         <button @click="showToast1">点我1</button>
         <button @click="showToast2">点我2</button>
         <button @click="showToast3">点我3</button>
         <button @click="showToast4">点我4</button>
-      </vi-toast>
+      </vi-toast> -->
       <!-- <hr> -->
-        <button @click="showToast">点我</button>
+        <!-- <button @click="showToast">点我</button>
         <button @click="showToast1">点我1</button>
         <button @click="showToast2">点我2</button>
         <button @click="showToast3">点我3</button>
         <button @click="showToast4">点我4</button>
-    </div>
-    
+    </div> -->
+    <vi-tab>
+      <vi-tab-nav></vi-tab-nav>
+      <vi-tab-body></vi-tab-body>
+    </vi-tab>
+
 
   </div>
 </body>
