--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
         <button @click="showToast3">点我3</button>
         <button @click="showToast4">点我4</button>
     </div> -->
-    <vi-tab>
-      <vi-tab-nav></vi-tab-nav>
-      <vi-tab-body></vi-tab-body>
-    </vi-tab>
+    <vi-tabs>
+      <vi-tabs-nav></vi-tabs-nav>
+      <vi-tabs-body></vi-tabs-body>
+    </vi-tabs>
 
 
   </div>
