--- a/index.html
+++ b/index.html
@@ -212,20 +212,17 @@
         <button @click="showToast4">点我4</button>
     </div> -->
     <vi-tabs class="tabs" :selected.sync="selectedTab">
-      <vi-tabs-bar>
-        <vi-tabs-item name="woman">标签1</vi-tabs-item>
-        <vi-tabs-item name="finance">标签2</vi-tabs-item>
-        <vi-tabs-item name="sport">标签3</vi-tabs-item>
+      <vi-tabs-bar color="teal">
+        <vi-tabs-item name="woman" line="aqua">标签1</vi-tabs-item>
+        <vi-tabs-item name="finance" line="aqua">标签2</vi-tabs-item>
+        <vi-tabs-item name="sport" line="aqua">标签3</vi-tabs-item>
       </vi-tabs-bar>
       <vi-tabs-body>
         <vi-tabs-content name="woman">标签1的内容</vi-tabs-content>
         <vi-tabs-content name="finance">标签2的内容</vi-tabs-content>
         <vi-tabs-content name="sport">标签3的内容</vi-tabs-content>
       </vi-tabs-body>
-      {{selectedTab}}
     </vi-tabs>
-
-
   </div>
 </body>
 
