--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
       margin-top: 100px;
       margin-left: 10px;
     }
+    /* .tabs{
+      width: 50%;
+    } */
   </style>
 </head>
 
@@ -212,10 +215,10 @@
         <button @click="showToast4">点我4</button>
     </div> -->
     <vi-tabs class="tabs" :selected.sync="selectedTab">
-      <vi-tabs-bar color="teal">
-        <vi-tabs-item name="woman" line="aqua">标签1</vi-tabs-item>
-        <vi-tabs-item name="finance" line="aqua">标签2</vi-tabs-item>
-        <vi-tabs-item name="sport" line="aqua">标签3</vi-tabs-item>
+      <vi-tabs-bar color="teal" >
+        <vi-tabs-item name="woman" line-color="aqua">标签1</vi-tabs-item>
+        <vi-tabs-item name="finance" line-color="aqua">标签2</vi-tabs-item>
+        <vi-tabs-item name="sport" line-color="aqua">标签3</vi-tabs-item>
       </vi-tabs-bar>
       <vi-tabs-body>
         <vi-tabs-content name="woman">标签1的内容</vi-tabs-content>
@@ -223,6 +226,42 @@
         <vi-tabs-content name="sport">标签3的内容</vi-tabs-content>
       </vi-tabs-body>
     </vi-tabs>
+    <vi-tabs class="tabs" :selected.sync="selectedTab">
+        <vi-tabs-bar color="teal" >
+          <vi-tabs-item name="woman" icon-name="loading" line-color="aqua">标签1</vi-tabs-item>
+          <vi-tabs-item name="finance" icon-name="loading" line-color="aqua">标签2</vi-tabs-item>
+          <vi-tabs-item name="sport" icon-name="loading" line-color="aqua">标签3</vi-tabs-item>
+        </vi-tabs-bar>
+        <vi-tabs-body>
+          <vi-tabs-content name="woman">标签1的内容</vi-tabs-content>
+          <vi-tabs-content name="finance">标签2的内容</vi-tabs-content>
+          <vi-tabs-content name="sport">标签3的内容</vi-tabs-content>
+        </vi-tabs-body>
+      </vi-tabs>
+    <vi-tabs class="tabs" :selected.sync="selectedTab">
+        <vi-tabs-bar color="teal" >
+          <vi-tabs-item name="woman" icon-name="search" line-color="aqua" position="right">标签1</vi-tabs-item>
+          <vi-tabs-item name="finance" icon-name="search" line-color="aqua" position="right">标签2</vi-tabs-item>
+          <vi-tabs-item name="sport" icon-name="search" line-color="aqua" position="right">标签3</vi-tabs-item>
+        </vi-tabs-bar>
+        <vi-tabs-body>
+          <vi-tabs-content name="woman">标签1的内容</vi-tabs-content>
+          <vi-tabs-content name="finance">标签2的内容</vi-tabs-content>
+          <vi-tabs-content name="sport">标签3的内容</vi-tabs-content>
+        </vi-tabs-body>
+      </vi-tabs>
+      <vi-tabs class="tabs" :selected.sync="selectedTab">
+          <vi-tabs-bar color="teal">
+            <vi-tabs-item name="woman" line-color="aqua" icon-name="error"  position="top">标签1</vi-tabs-item>
+            <vi-tabs-item name="finance" line-color="aqua" icon-name="error" position="top">标签2</vi-tabs-item>
+            <vi-tabs-item name="sport" line-color="aqua" icon-name="error"  position="top">标签3</vi-tabs-item>
+          </vi-tabs-bar>
+          <vi-tabs-body>
+            <vi-tabs-content name="woman">标签1的内容</vi-tabs-content>
+            <vi-tabs-content name="finance">标签2的内容</vi-tabs-content>
+            <vi-tabs-content name="sport">标签3的内容</vi-tabs-content>
+          </vi-tabs-body>
+        </vi-tabs>
   </div>
 </body>
 
