--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <button @click="showToast3">点我3</button>
         <button @click="showToast4">点我4</button>
     </div> -->
-    <vi-tabs class="tabs" :selected.sync="selectedTab">
+    <!-- <vi-tabs class="tabs" :selected.sync="selectedTab">
       <vi-tabs-bar color="teal" space="around" line-color="aqua">
         <vi-tabs-item name="woman" line-color="aqua">标签1</vi-tabs-item>
         <vi-tabs-item name="finance" line-color="aqua">标签2</vi-tabs-item>
@@ -267,7 +267,7 @@
             <vi-tabs-content name="finance">标签2的内容</vi-tabs-content>
             <vi-tabs-content name="sport">标签3的内容</vi-tabs-content>
           </vi-tabs-body>
-        </vi-tabs>
+        </vi-tabs> -->
   </div>
 </body>
 
