--- a/index.html
+++ b/index.html
@@ -268,7 +268,23 @@
             <vi-tabs-content name="sport">标签3的内容</vi-tabs-content>
           </vi-tabs-body>
         </vi-tabs> -->
-  </div>
+        <div class="popover" style="padding-top: 100px;padding-left: 100px;">
+          <vi-popover>
+            <template slot="content">
+              <div>popover内容</div>
+            </template>
+            <button>点击</button>
+          </vi-popover>
+          <vi-popover>
+            <template slot="content">
+              <div>popover内容</div>
+            </template>
+            <button>点击</button>
+          </vi-popover>
+        </div>
+        
+
+      </div>
 </body>
 
 <script>
