实现最简单的popover

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <vi-tabs-content name="sport">标签3的内容</vi-tabs-content>
           </vi-tabs-body>
         </vi-tabs> -->
-        <div class="popover" style="padding-top: 100px;padding-left: 100px;">
+        <div class="popover" style="padding-top: 100px;padding-left: 100px;border: 1px solid red;">
           <vi-popover>
             <template slot="content">
               <div>popover内容</div>
