解决overflow:hidden导致内容被隐藏的问题

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 </head>
 
 <body>
-  <div id="app">
+  <div id="app" style="padding-top: 100px;padding-left: 100px;border: 1px solid red;">
     <!-- <div class="icon">
       <vi-icon class="test" vi-icon-name="info" vi-icon-size="small"></vi-icon>
       <vi-icon vi-icon-name="search" vi-icon-size=small></vi-icon>
@@ -268,7 +268,7 @@
             <vi-tabs-content name="sport">标签3的内容</vi-tabs-content>
           </vi-tabs-body>
         </vi-tabs> -->
-        <div class="popover" style="padding-top: 100px;padding-left: 100px;border: 1px solid red;">
+        <div class="popover" style="overflow: hidden;padding: 5px;border: 1px solid greenyellow;" @click="yyy">
           <vi-popover>
             <template slot="content">
               <div>popover内容</div>
