添加默认样式

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div> -->
 
     <!-- <div class="button">
-      <vi-button class="dc">默认样式</vi-button>
+      <vi-button >默认</vi-button>
       <vi-button type="default">默认样式</vi-button>
       <vi-button type="primary" icon-name="upload" >主要按钮</vi-button>
       <vi-button type="primary" icon-name="upload" icon-size="medium" circle="circle"></vi-button>
@@ -272,15 +272,15 @@
         <div class="popover" style="overflow: hidden;padding: 5px;border: 1px solid greenyellow;" @click="yyy">
           <vi-popover>
             <template slot="content">
-              <div>popover内容</div>
+              <div>popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容</div>
             </template>
-            <button>点击</button>
+            <vi-button type="primary">点击</vi-button>
           </vi-popover>
           <vi-popover>
             <template slot="content">
-              <div>popover内容</div>
+              <div>popoverhjkfdhforiegjiiogjjjjjjjjjjjjjjkdf</div>
             </template>
-            <button>点击</button>
+            <vi-button>点击</vi-button>
           </vi-popover>
         </div>
         
