--- a/index.html
+++ b/index.html
@@ -295,6 +295,33 @@
             <vi-button type="primary">点击</vi-button>
           </vi-popover>
         </div>
+
+        <div class="popover" style="overflow: hidden;padding-top: 50px;border: 1px solid greenyellow;" @click="yyy">
+          <vi-popover position="bottom" trigger="hover">
+            <template slot="content">
+              <div>popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容</div>
+            </template>
+            <vi-button type="primary">点击</vi-button>
+          </vi-popover>
+          <vi-popover trigger="hover">
+            <template slot="content" >
+              <div>popoverhjkfdhforiegjiiogjjjjjjjjjjjjjjkdf</div>
+            </template>
+            <vi-button>点击</vi-button>
+          </vi-popover>
+          <vi-popover position="left" trigger="hover">
+            <template slot="content">
+              <div>popover内容</div>
+            </template>
+            <vi-button type="primary">点击</vi-button>
+          </vi-popover>
+          <vi-popover position="right" trigger="hover">
+            <template slot="content">
+              <div>popover内容popover内容popover内容</div>
+            </template>
+            <vi-button type="primary">点击</vi-button>
+          </vi-popover>
+        </div>
         
 
       </div>
