popover功能基本完成

--- a/index.html
+++ b/index.html
@@ -270,13 +270,13 @@
           </vi-tabs-body>
         </vi-tabs> -->
         <div class="popover" style="overflow: hidden;padding: 5px;border: 1px solid greenyellow;" @click="yyy">
-          <vi-popover position="bottom">
+          <vi-popover position="top">
             <template slot="content">
               <div>popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容</div>
             </template>
             <vi-button type="primary">点击</vi-button>
           </vi-popover>
-          <vi-popover>
+          <vi-popover position="top">
             <template slot="content">
               <div>popoverhjkfdhforiegjiiogjjjjjjjjjjjjjjkdf</div>
             </template>
